# python-template

./: .dockerignore  .env.example  .flake8  .gitignore  README.md  claude.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  setup.py
backend/: Dockerfile
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/tests/: test_main.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
scripts/: dev-local.sh  dev.sh  init.sh  prod-local.sh  prod.sh  test.sh
